--- a/consumer-producer/main.ipynb
+++ b/consumer-producer/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "[('records',)]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,6 +36,7 @@
     "\n",
     "# Create/connect to DuckDB database\n",
     "con = duckdb.connect('../random_tests/scan_results.duckdb')\n",
+    "con = duckdb.connect('/home/sgan/scan_results.duckdb')\n",
     "con.execute(\"SHOW TABLES\").fetchall()"
    ]
   },
@@ -55,9 +56,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "326d8295894f4d0b8b1ffda64928f559",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, layout=Layout(width='auto'), style=ProgressStyle(bar_color='black'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -85,23 +100,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>did:plc:cm4bwax4evxmkiuwxvvkvlmx</td>\n",
+       "      <td>did:plc:4zzmrr3g3mqtxptcot5ep72c</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>did:plc:cnujroalnuchtfjozznzxfm3</td>\n",
+       "      <td>did:plc:yun5yzvbtyt6oge4h35rg2jd</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>did:plc:vm7wifn25awqm2zrury5pudg</td>\n",
+       "      <td>did:plc:nvfposmpmhegtyvhbs75s3pw</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>did:plc:ylmbufmy5btcigjk27oup4zl</td>\n",
+       "      <td>did:plc:nweeqmrvdmordc23oe2th3ub</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>did:plc:zbrd6f4ykvwgftv66lv2ozjf</td>\n",
+       "      <td>did:plc:2a4njid4uyprbug36pl7qcm6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -109,23 +124,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37187</th>\n",
-       "      <td>did:plc:jikpepa6gimefucl7pebrely</td>\n",
+       "      <td>did:plc:6zvj2afim6okbx6fneyejzl7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37188</th>\n",
-       "      <td>did:plc:mrfolvuqzuv54n6wlljyoox5</td>\n",
+       "      <td>did:plc:qwhrll7ackpqf3rlbak3kh5r</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37189</th>\n",
-       "      <td>did:plc:qmrd2hmucin2ucnfb36hry3y</td>\n",
+       "      <td>did:plc:jatbilnjphjqdod6bbkr2wno</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37190</th>\n",
-       "      <td>did:plc:4z7vjxv47t6gk4yknfxiaiwb</td>\n",
+       "      <td>did:plc:ziijpw4ilekowv2t55veu5ly</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37191</th>\n",
-       "      <td>did:plc:nybik5votimmgcwfy7nnfdgc</td>\n",
+       "      <td>did:plc:ynjaix52swzhdfl4shszrc5e</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -134,22 +149,22 @@
       ],
       "text/plain": [
        "                           producer_did\n",
-       "0      did:plc:cm4bwax4evxmkiuwxvvkvlmx\n",
-       "1      did:plc:cnujroalnuchtfjozznzxfm3\n",
-       "2      did:plc:vm7wifn25awqm2zrury5pudg\n",
-       "3      did:plc:ylmbufmy5btcigjk27oup4zl\n",
-       "4      did:plc:zbrd6f4ykvwgftv66lv2ozjf\n",
+       "0      did:plc:4zzmrr3g3mqtxptcot5ep72c\n",
+       "1      did:plc:yun5yzvbtyt6oge4h35rg2jd\n",
+       "2      did:plc:nvfposmpmhegtyvhbs75s3pw\n",
+       "3      did:plc:nweeqmrvdmordc23oe2th3ub\n",
+       "4      did:plc:2a4njid4uyprbug36pl7qcm6\n",
        "...                                 ...\n",
-       "37187  did:plc:jikpepa6gimefucl7pebrely\n",
-       "37188  did:plc:mrfolvuqzuv54n6wlljyoox5\n",
-       "37189  did:plc:qmrd2hmucin2ucnfb36hry3y\n",
-       "37190  did:plc:4z7vjxv47t6gk4yknfxiaiwb\n",
-       "37191  did:plc:nybik5votimmgcwfy7nnfdgc\n",
+       "37187  did:plc:6zvj2afim6okbx6fneyejzl7\n",
+       "37188  did:plc:qwhrll7ackpqf3rlbak3kh5r\n",
+       "37189  did:plc:jatbilnjphjqdod6bbkr2wno\n",
+       "37190  did:plc:ziijpw4ilekowv2t55veu5ly\n",
+       "37191  did:plc:ynjaix52swzhdfl4shszrc5e\n",
        "\n",
        "[37192 rows x 1 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,9 +200,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c1a0b7f46d184bff8d72778924fe7567",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, layout=Layout(width='auto'), style=ProgressStyle(bar_color='black'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -291,7 +320,7 @@
        "[5781724 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,14 +348,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mappings unchanged, safe to use existing post embeddings.\n",
+      "Warning: Mappings have changed! You should recompute post embeddings.\n",
       "Matrix shape: (132728, 37192)\n"
      ]
     }
@@ -437,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +475,7 @@
      "text": [
       "Consumer embeddings shape: (132728, 64)\n",
       "Average consumer embedding L2 norm: 1.000\n",
-      "Average producer affinity: 0.490\n"
+      "Average producer affinity: 0.510\n"
      ]
     }
    ],
@@ -470,22 +499,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "np.float32(1.0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.mean([np.linalg.norm(emb) for emb in consumer_embeddings])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.21662155, -0.50600636,  0.15419115, -0.2904625 , -0.13291194,\n",
+       "       -0.01997254,  0.27108294, -0.12701486,  0.01243078,  0.18253486,\n",
+       "       -0.04074553, -0.0894287 ,  0.15765716, -0.05350663, -0.01573798,\n",
+       "       -0.03574031, -0.07517818, -0.02243225, -0.01662867, -0.08249946,\n",
+       "       -0.13188218,  0.02957584, -0.23423398,  0.06426441, -0.02381555,\n",
+       "        0.10293218, -0.00081384,  0.0772708 ,  0.03828541, -0.0115283 ,\n",
+       "        0.02673021,  0.02704641, -0.09579184,  0.02606973, -0.00744993,\n",
+       "        0.22876176,  0.13327415, -0.01309871, -0.00972604, -0.00772278,\n",
+       "        0.09112316, -0.01243593,  0.10142223,  0.1984034 , -0.00582637,\n",
+       "        0.0490672 , -0.05205458, -0.10212407, -0.06783661, -0.08773175,\n",
+       "       -0.06725919, -0.14728394,  0.07524669, -0.02430098, -0.08882379,\n",
+       "        0.21316233,  0.01053818, -0.15235397, -0.05853765, -0.03106489,\n",
+       "        0.07335265, -0.00482062,  0.07700744,  0.08359493], dtype=float32)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "consumer_embeddings[consumer_to_idx['did:plc:42kmtf65uqs765coei7bimwx']]"
    ]
   },
   {
@@ -1350,9 +1411,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bluesky",
    "language": "python",
-   "name": "python3"
+   "name": "bluesky"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1364,9 +1425,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
